fix: event listeners over stack / css styling

--- a/ngx-flow/projects/ngx-flow/src/tab-flow/flow-item/flow-item.component.html
+++ b/ngx-flow/projects/ngx-flow/src/tab-flow/flow-item/flow-item.component.html
@@ -16,8 +16,8 @@
         <!-- content -->
         <div
             class="call_text"
-            [style.color]="item.options.color_method || 'initial'"
-        >
+            >
+            <!-- [style.color]="item.options.color_method || 'initial'" -->
             {{ item.method_text }}
             <span
                 *ngIf="item.QOS && item.QOS.MOS"
