--- a/ngx-flow/src/styles.scss
+++ b/ngx-flow/src/styles.scss
@@ -1,12 +1,5 @@
-/* You can add global styles to this file, and also import other style files */
-
-html,
-body {
-  height: 100%;
-}
-body {
-  margin: 0;
-  font-family: Roboto, 'Helvetica Neue', sans-serif;
+* {
+  font-family: Inter, Helvetica, Arial, sans-serif;
 }
 .dark-theme > * {
   color: #fff;
