--- a/ngx-flow/projects/ngx-flow/src/tab-flow/tab-flow.component.html
+++ b/ngx-flow/projects/ngx-flow/src/tab-flow/tab-flow.component.html
@@ -85,7 +85,7 @@
   >
     <div
       class="VS-Container"
-      style="height: initial; overflow: initial !important"
+      style="height: initial; overflow: scroll !important"
       [style.min-width.px]="pageWidth + 100"
     >
       <div style="height: 92px"></div>
