--- a/ngx-flow/projects/ngx-flow/src/tab-flow/tab-flow.component.scss
+++ b/ngx-flow/projects/ngx-flow/src/tab-flow/tab-flow.component.scss
@@ -146,6 +146,7 @@
 
         .aliasfield {
           display: flex;
+
           flex-direction: column;
           font-size: 12px;
           justify-content: center;
@@ -154,7 +155,7 @@
           padding: 3px 3px;
           text-align: center;
           max-width: 105px;
-          background-color: rgba(255, 255, 255, 0.7);
+          background-color: hsl(0, 0%, 100%);
           min-height: 58px;
         }
 
@@ -182,7 +183,7 @@
   }
 }
 .dark-theme .hosts .hosts-wrapper .item-wrapper .item .aliasfield {
-  background-color: rgba(0, 0, 0, 0.3);
+  background-color: hsla(0, 0%, 10%, 1);
 }
 .flowscreen {
   position: relative;
