--- a/ngx-flow/projects/ngx-flow/src/tab-flow/tab-flow.component.scss
+++ b/ngx-flow/projects/ngx-flow/src/tab-flow/tab-flow.component.scss
@@ -43,6 +43,8 @@
     box-shadow: inset 7px 10px 12px transparent;
   }
 }
+::-webkit-scrollbar-corner { background: rgba(0,0,0,0.5); } 
+
 
 .flow-grid-lines {
   display: flex;
