--- a/ngx-flow/projects/ngx-flow/src/tab-flow/tab-flow.component.scss
+++ b/ngx-flow/projects/ngx-flow/src/tab-flow/tab-flow.component.scss
@@ -43,8 +43,6 @@
     box-shadow: inset 7px 10px 12px transparent;
   }
 }
-::-webkit-scrollbar-corner { background: rgba(0,0,0,0.5); } 
-
 
 .flow-grid-lines {
   display: flex;
@@ -148,7 +146,6 @@
 
         .aliasfield {
           display: flex;
-
           flex-direction: column;
           font-size: 12px;
           justify-content: center;
@@ -157,7 +154,7 @@
           padding: 3px 3px;
           text-align: center;
           max-width: 105px;
-          background-color: hsl(0, 0%, 100%);
+          background-color: rgba(255, 255, 255, 0.7);
           min-height: 58px;
         }
 
@@ -185,7 +182,7 @@
   }
 }
 .dark-theme .hosts .hosts-wrapper .item-wrapper .item .aliasfield {
-  background-color: hsla(0, 0%, 10%, 1);
+  background-color: rgba(0, 0, 0, 0.3);
 }
 .flowscreen {
   position: relative;
