--- a/ngx-flow/src/app/app.component.html
+++ b/ngx-flow/src/app/app.component.html
@@ -6,7 +6,7 @@
 <div class="base" [ngClass]="{'dark-theme': isDarkTheme}" *ngIf="isReady">
     <!-- <div > -->
         <!-- <div class="container"> -->
-            <ngx-flow [data]="_dataFlow"></ngx-flow>
+            <ngx-flow [data]="_dataFlow" [isSimplify]="isSimplify"></ngx-flow>
         <!-- </div> -->
     <!-- </div> -->
     <!-- <p>{{ _dataFlow | json }}</p> -->
