feat: fixed Simple mode
feat: fixed Simple mode

--- a/ngx-flow/projects/ngx-flow/src/tab-flow/flow-item/flow-item.component.html
+++ b/ngx-flow/projects/ngx-flow/src/tab-flow/flow-item/flow-item.component.html
@@ -100,11 +100,12 @@
         </div>
         <div class="call-text-date">
             {{
-                isAbsolute
-                    ? item.diff_absolute
-                    : item.diff
-                    ? item.diff
-                    : "+0.00ms"
+                item.details
+                }}
+                </div>
+                <div class="call-text-date">
+                    {{
+                    item.line
             }}
         </div>
     </div>
